[package]
name = "hash-to-bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
blake3 = "1.3.3"
mur3 = { path = "./mur3", version = "0.1.0" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
siphasher = "0.3.10"
solana-sdk = "1.15.2"
